--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -89,8 +89,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
             
                 <ul>
@@ -100,8 +100,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
             
                 <ul>
@@ -111,8 +111,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
 
                 <ul>
@@ -122,8 +122,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
 
             </div>
@@ -152,8 +152,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
             
                 <ul>
@@ -163,8 +163,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
             
                 <ul>
@@ -174,8 +174,8 @@
                         Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
-                    <button class="btn btn-primary btn-sm m-1">Join</button>
-                    <button class="btn btn-success btn-sm m-1">Star</button>
+                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-success  m-1">Star</button>
                 </ul>
             </div>
         
