polishing on styles

--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -5,7 +5,6 @@
 
             <!-- Heading -->
                 <h3 class="text-success"><strong>About The Blog</strong></h3>
-                <hr>
 
                 <p>
                     I am Vitalis, a Full-Stack software developer. I created this blog for 
@@ -28,7 +27,7 @@
                         <p>
                             Clients who are interested in my services can get in touch with me here if 
                             they don't already have my email address. A number also comes here to see 
-                            how other users are talking about my services.
+                            how other users are reviewing my services.
                         </p>
                         <li><strong>Software Development Students</strong></li>
                         <p>
@@ -50,7 +49,6 @@
 
             <!-- Heading -->
             <h3 class="text-success"><strong>About Me</strong></h3>
-            <hr>
             <p>
                 I am Vitalis, <span class="text-success"><strong>Kipyegon Kirui Vitalis</strong></span> to be detail.
                 A Full-Stack software developer by profession. My favorite choice of stack is <span class="text-success">
@@ -73,7 +71,6 @@
         <div class="col-md-3 mx-auto skills">
             <div class="text-center">
                 <h3 class="text-success"><strong>Skills</strong></h3>
-                <hr>
             </div>
 
             <p>
@@ -114,7 +111,6 @@
         <div class="col-md-4 mx-auto passions">
             <div class="text-center">
                 <h3 class="text-success"><strong>Passion</strong></h3>
-                <hr>
             </div>
 
             <p>
@@ -162,7 +158,6 @@
         <div class="col-md-5 mx-auto hobbies">
             <div class="text-center">
                 <h3 class="text-success"><strong>Hobbies</strong></h3>
-                <hr>
             </div>
             <p>
                 Wanna spent time with me? I won't resist whatever we going to do
