--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.html
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.html
@@ -6,7 +6,6 @@
 
             <div>
                 <h1><strong>Contact Me</strong></h1>
-                <hr>
                 <p>
                     There are a couple of reasons why you are in this page!
                 </p>
@@ -78,7 +77,6 @@
 
                 <div class="heading">
                     <h3 class="text-success text-center"><strong>Social Media</strong></h3>
-                    <hr>
                     <p>
                         These are my social media handles, the only ones. For some reason you might
                         prefer reaching out using them. I response faster to contacts made through the above form though.
@@ -93,6 +91,7 @@
                         <li><strong><a href="">Facebook</a></strong></li>
                         <li><strong><a href="">Linked In</a></strong></li>
                         <li><strong><a href="">Github</a></strong></li>
+                        <li><strong><a href="">Email Address</a></strong></li>
                     </ul>
                 </div>
 
