--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -4,8 +4,7 @@
 
             <!-- Heading -->
             <div class="text-center heading">
-                <h1 class="text-success"><strong>Admin | Blogs Panel</strong></h1>
-                <hr>
+                <h1 class="text-success"><strong>Blogs Panel</strong></h1>
                 <p>
                     This panel displays created blog posts on the left to assist admin manage and track them. 
                     To the rigth is a form for creating a new blog post. Expanding a blog post displays more 
@@ -21,7 +20,6 @@
 
             <div class="text-center heading">
                 <h2 class="text-success"><strong>Running Blogs</strong></h2>
-                <hr>
                 <p>
                     These are blogs that are currently running and users are able to interact with them. 
                     You can expand any of them by clicking on them, through this, you can access a more comprehensive 
@@ -72,7 +70,6 @@
 
             <div class="text-center heading">
                 <h2 class="text-success"><strong>Create a new Blog</strong></h2>
-                <hr>
                 <p>
                     Use this blog form to create a new blog post.
                 </p>
@@ -136,7 +133,6 @@
     <div class="row switchPanel">
         <div class="col-md-6 mx-auto text-center my-3">
             <h2><strong>Switch Panel</strong></h2>
-            <hr>
             <p>
                 Use respective buttons below to switch between other admin panels.
             </p>
