--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.css
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.css
@@ -2,7 +2,7 @@
     background-color: white;
     padding: 2%;
     /* box-shadow: 0px 0px 2px 0px grey; */
-    border-radius: 20px;
+    border-radius: 0px 100px 0px 100px;
 }
 
 .skills,
@@ -14,13 +14,15 @@
     border-radius: 20px;
 }
 
-hr {
-    width: 40%;
-    margin: auto;
-    margin-bottom: 2%;
-    border: 1px solid green;
-}
-
 li{
     color: green;
+}
+
+h3{
+    background-color: rgb(201, 228, 252);
+    width: 40%;
+    margin: auto;
+    padding: 1%;
+    color: black !important;
+    border-radius: 150px 0px 150px 0px;
 }
