--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.css
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.css
@@ -1,54 +1,64 @@
-hr{
-    width: 30%;
-    border: 1px solid black;
-    margin-top: 1%;
+h1{
+    background-color: rgb(209, 231, 250);
+    width: 40%;
+    padding: 1%;
+    padding-left: 10%;
+    border-radius: 100px 0px 100px 0px;
 }
 
 label{
     color: green;
 }
 
-.form{
-    width: 50%;
+h3{
+    background-color: white;
+    width: 35%;
     margin: auto;
+    padding: 1%;
+    border-radius: 100px 0px 100px 0px;
+    box-shadow: 0px 0px 2px 0px ;
+    margin-bottom: 1%;
+}
+
+.form{
+    /* width: 50%; */
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    margin: auto;
+    /* box-shadow: 0px 0px 5px 0px; */
+    border-radius: 20px 200px 20px 200px;
+    background-color: rgb(255, 242, 222);
+}
+
+.form-control{
+    border-radius: 50px 0px 50px 0px;
+    padding: 2%;
+    margin-left: 2%;
+}
+
+button{
+    border-radius: 30px 0px 30px 0px;
+    padding: 3%;
+    font-size: 16px;
 }
 
 .contact{
     box-shadow: 0px 0px 0px 0px;
     padding: 5%;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 20px 200px 50px 20px; 
 }
 
 .socialMedia{
     padding: 2%;
     background-color:rgb(229, 240, 250);
-    border-radius: 20px;
+    border-radius: 50px 0px 150px 0px;
     width: 75%;
     margin: auto;
 }
 
-.heading hr{
-    margin: auto;
-    width: 30%;
-    margin-bottom: 2%;
-}
-
 ul, li{
-    margin-left: 5%;
+    margin-left: 3%;
 }
-
-/* .aftersubmit hr{
-    width: 30%;
-    margin: auto;
-    margin-bottom: 1%;
-} */
-
-/* .aftersubmit{
-    width: 50%;
-    margin: auto;
-    background-color: rgb(229, 240, 250);
-    box-shadow: 0px 0px 2px 0px;
-    padding: 2%;
-    margin-bottom: 5%;
-} */
