--- a/Blog-UI/src/app/Modules/admin/admin.component.css
+++ b/Blog-UI/src/app/Modules/admin/admin.component.css
@@ -1,17 +1,24 @@
-.verify{
-    background-color: white;
-    padding: 3%;
-    box-shadow: 0px 0px 2px 0px grey;
-    border-radius: 20px;
-}
-
-hr{
-    width: 50%;
+h3 {
+    background-color: rgb(209, 231, 250);
+    width: 75%;
     margin: auto;
-    margin-bottom: 5%;
-    border: 1px solid green;
+    border-radius: 100px 0px 100px 0px;
+    color: black !important;
+    padding: 1%;
+
 }
 
-label{
+label {
     color: green;
+}
+
+.verify {
+    background-color: rgb(255, 255, 255);
+    padding: 5%;
+    border-radius: 100px 0px 150px 0px;
+}
+
+button {
+    font-size: 0.8rem;
+    border-radius: 150px 0px 150px 0px;
 }
