--- a/Blog-UI/src/app/Modules/authentication/Components/change-password/change-password.component.css
+++ b/Blog-UI/src/app/Modules/authentication/Components/change-password/change-password.component.css
@@ -1,12 +1,22 @@
-hr {
-    width: 75%;
-    margin: auto;
-    padding-bottom: 5%;
+h2 {
+    background-color: rgb(209, 231, 250);
+    border-radius: 100px 0px 100px 0px;
+    color: black !important;
+    padding: 1%;
+
+}
+
+label {
+    color: green;
 }
 
 .form {
-    box-shadow: 0px 0px 2px 0px grey;
-    padding: 3%;
-    border-radius: 20px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    padding: 5%;
+    border-radius: 150px 0px 150px 0px;
+}
+
+button {
+    font-size: 0.8rem;
+    border-radius: 150px 0px 150px 0px;
 }
