--- a/Blog-UI/src/app/Modules/authentication/Components/register/register.component.css
+++ b/Blog-UI/src/app/Modules/authentication/Components/register/register.component.css
@@ -1,15 +1,24 @@
-hr{
-    width: 65%;
+h2 {
+    background-color: rgb(209, 231, 250);
+    width: 75%;
     margin: auto;
+    border-radius: 100px 0px 100px 0px;
+    color: black !important;
+    padding: 1%;
+
 }
 
-label{
+label {
     color: green;
 }
 
-.registration{
+.registration {
     background-color: rgb(255, 255, 255);
     padding: 5%;
-    border-radius: 20px ;
-    box-shadow: 0px 0px 0px 0px ;
+    border-radius: 150px 0px 150px 0px;
+}
+
+button {
+    font-size: 0.8rem;
+    border-radius: 150px 0px 150px 0px;
 }
