--- a/Blog-UI/src/app/Modules/authentication/Components/update-details/update-details.component.css
+++ b/Blog-UI/src/app/Modules/authentication/Components/update-details/update-details.component.css
@@ -1,22 +1,28 @@
-label,
-hr {
+h2 {
+    background-color: rgb(209, 231, 250);
+    width: 75%;
+    margin: auto;
+    border-radius: 100px 0px 100px 0px;
+    color: black !important;
+    padding: 1%;
+
+}
+
+label {
     color: green;
 }
 
-hr {
-    /* border: 1px solid green; */
-    width: 75%;
-    margin: auto;
-    padding-bottom: 10px;
+.updateForm {
+    background-color: rgb(255, 255, 255);
+    padding: 5%;
+    border-radius: 150px 0px 150px 0px;
+}
+
+button {
+    font-size: 0.8rem;
+    border-radius: 150px 0px 150px 0px;
 }
 
 .form-check-label {
     padding-left: 5px;
-}
-
-.updateForm {
-    box-shadow: 0px 0px 5px 0px grey;
-    padding: 3%;
-    background-color: white;
-    border-radius: 20px;
 }
