--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -37,6 +37,7 @@
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
                         <button class="btn btn-primary btn-sm m-1">Expand</button>
+                        <button class="btn btn-success btn-sm m-1">Archirve</button>
                         <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
 
@@ -48,6 +49,7 @@
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
                     <button class="btn btn-primary btn-sm m-1">Expand</button>
+                    <button class="btn btn-success btn-sm m-1">Archirve</button>
                     <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
 
@@ -59,6 +61,7 @@
                         molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
                     </p>
                     <button class="btn btn-primary btn-sm m-1">Expand</button>
+                    <button class="btn btn-success btn-sm m-1">Archirve</button>
                     <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
             </div>
