--- a/Blog-UI/src/app/Modules/admin/admin.component.html
+++ b/Blog-UI/src/app/Modules/admin/admin.component.html
@@ -30,7 +30,7 @@
         </div>
 
         <!-- Admin menu code -->
-        <div class="col-md-6 mx-auto my-5 text-center verify" *ngIf="verified">
+        <div class="col-md-8 mx-auto my-5 text-center verify" *ngIf="verified">
 
             <h3 class="text-success">Admin Panel</h3>
             <hr>
@@ -45,6 +45,7 @@
                 <button class="btn btn-primary m-3" type="button" routerLink="users">Users</button>
                 <button class="btn btn-success m-3" type="button" routerLink="blogs">Blogs</button>
                 <button class="btn btn-info m-3" type="button" routerLink="messages">Messages</button>
+                <button class="btn btn-dark m-3" type="button" routerLink="blog-requests">Blogs Request</button>
 
         </div>
 
