--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -142,7 +142,8 @@
 
             <!-- Buttons -->
             <a href="admin/users"><button class="btn btn-primary m-3"><strong>Users</strong></button></a>
-            <a href="admin/messages"><button class="btn btn-info m-3">Messages</button></a>
+            <a href="admin/messages"><button class="btn btn-dark m-3">Messages</button></a>
+            <a href="admin/blog-requests"><button class="btn btn-success m-3">Blog Requests</button></a>
 
         </div>
     </div>
