--- a/Blog-UI/src/app/Components/archirves/archirves.component.html
+++ b/Blog-UI/src/app/Components/archirves/archirves.component.html
@@ -1,1 +1,106 @@
-<p>archirves works!</p>
+<div class="container-fluid">
+    <div class="row overallRow">
+        <div class="col-md-6 mx-auto archirves">
+
+            <div class="heading text-center">
+                <h1><strong>ARCHIRVES</strong></h1>
+                <p>
+                    Welcome to Archirves, this is where our old and inactive blogs are backed up. I try have 
+                    the homepage as neat and simple as possible. Anyway, meet all our ever existing blogs.
+                </p>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- Blogs -->
+    <div class="row blogsRow">
+        <div class="col-md-4 mx-auto">
+            <ul>
+                <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                    Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                    molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                </p>
+                <button class="btn btn-primary m-1">Open</button>
+                <button class="btn btn-success  m-1">Star</button>
+            </ul>
+        </div>
+        
+        <div class="col-md-4 mx-auto">
+            <ul>
+                <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                    Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                    molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                </p>
+                <button class="btn btn-primary m-1">Open</button>
+                <button class="btn btn-success  m-1">Star</button>
+            </ul>
+        </div>
+        
+        <div class="col-md-4 mx-auto">
+            <ul>
+                <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                    Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                    molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                </p>
+                <button class="btn btn-primary m-1">Open</button>
+                <button class="btn btn-success  m-1">Star</button>
+            </ul>
+        </div>
+        
+        <div class="col-md-4 mx-auto">
+            <ul>
+                <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                    Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                    molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                </p>
+                <button class="btn btn-primary m-1">Open</button>
+                <button class="btn btn-success  m-1">Star</button>
+            </ul>
+        </div>
+        
+        <div class="col-md-4 mx-auto">
+            <ul>
+                <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                    Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                    molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                </p>
+                <button class="btn btn-primary m-1">Open</button>
+                <button class="btn btn-success  m-1">Star</button>
+            </ul>
+        </div>
+        
+        <div class="col-md-4 mx-auto">
+            <ul>
+                <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                    Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                    molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                </p>
+                <button class="btn btn-primary m-1">Open</button>
+                <button class="btn btn-success  m-1">Star</button>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-md-3 mx-auto">
+            <!-- Load more button -->
+            <button class="btn btn-dark m-3">Load More</button>
+        </div>
+    </div>
+
+</div>
