--- a/Blog-UI/src/app/Components/navbar/navbar.component.html
+++ b/Blog-UI/src/app/Components/navbar/navbar.component.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li class="navbar-nav">
                         <a class="nav-link" routerLink="" routerLinkActive="active">Home</a>
+                        <a class="nav-link" routerLink="archirves" routerLinkActive="active">Archirves</a>
                         <a class="nav-link" routerLink="contact-me" routerLinkActive="active">Contact Me</a>
                         <a class="nav-link" routerLink="about-blog" routerLinkActive="active">About Blog</a>
                         <a class="nav-link" routerLink="authentications/login" routerLinkActive="active"
