--- a/Blog-UI/src/app/Components/archirves/archirves.component.css
+++ b/Blog-UI/src/app/Components/archirves/archirves.component.css
@@ -4,21 +4,21 @@
 }
 
 .container-fluid{
-    width: 95%;
+    width: 85%;
     margin: auto;
     background-color: white;
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 2%;
     padding-bottom: 5%;
-    border-radius: 150px 0px 150px 0px;
+    border-radius: 100px 0px 150px 0px;
 }
 
 .col-md-4{
     padding-top: 2%;
     padding-bottom: 2%;
     margin: 1%;
-    box-shadow: 0px 0px 20px 0px;
+    box-shadow: 0px 0px 2px 0px;
     border-radius: 70px 0px 100px 0px;
     background-color: blanchedalmond;
 }
@@ -43,7 +43,7 @@ h6 {
 }
 
 h1 {
-    width: 75%;
+    width: 300px;
     border-radius: 150px 0px 150px 0px;
     margin: auto;
     margin-bottom: 3%;
