--- a/Blog-UI/src/app/Components/archirves/archirves.component.css
+++ b/Blog-UI/src/app/Components/archirves/archirves.component.css
@@ -20,7 +20,7 @@
     margin: 1%;
     box-shadow: 0px 0px 2px 0px;
     border-radius: 70px 0px 100px 0px;
-    background-color: blanchedalmond;
+    background-color: rgb(254, 244, 228);
 }
 
 
