--- a/Blog-UI/src/styles.css
+++ b/Blog-UI/src/styles.css
@@ -3,11 +3,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Nova Round', cursive;
-    /* font-family: 'Charm', cursive; */
+    /* font-family: 'Nova Round', cursive; */
+    font-family: 'Charm', cursive;
 }
 
 html,
 body {
     height: 100%;
+}
+
+p, li{
+    font-size: 1.1rem;
 }
