--- a/Blog-UI/src/app/Components/homepage/homepage.component.css
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6{
 
 .myName{
     width: 50%;
-    border-radius: 100px 0px 100px 0px;
+    border-radius: 80px 0px 100px 0px;
 }
 
 .topBlogsName {
@@ -91,7 +91,7 @@ button{
 }
 
 .category{
-    background-color: gold;
+    background-color: rgb(193, 225, 253);
     padding: 5px;
 }
 
