fixing color shouting in buttons

--- a/Blog-UI/src/styles.css
+++ b/Blog-UI/src/styles.css
@@ -17,3 +17,15 @@ body {
 p, li{
     font-size: 1.1rem;
 }
+
+.btn-primary{
+    background-color: rgb(86, 122, 154) !important;
+}
+
+.btn-success{
+    background-color: rgb(83, 122, 83) !important;
+}
+
+.btn-danger{
+    background-color: rgb(190, 63, 63) !important;
+}
