--- a/Blog-UI/src/app/Components/archirves/archirves.component.css
+++ b/Blog-UI/src/app/Components/archirves/archirves.component.css
@@ -43,7 +43,7 @@ h6 {
 }
 
 h1 {
-    width: 300px;
+    width: 60%;
     border-radius: 150px 0px 150px 0px;
     margin: auto;
     margin-bottom: 3%;
