--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -213,21 +213,21 @@
                 </div>
 
                 <!-- form -->
-                <form action="">
+                <form action="" [formGroup]="suggestionForm" (ngSubmit)="submitSuggestion()">
 
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Title</strong></label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="title" formControlName="title">
                     </div>
 
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Category</strong></label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="category" formControlName="category">
                     </div>
 
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Blog</strong></label>
-                        <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                        <textarea name="blog" id="" cols="30" rows="5" class="form-control" formControlName="blog" ></textarea>
                     </div>
 
                     <!-- Submit button -->
