--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -38,6 +38,7 @@
                     </p>
                         <button class="btn btn-primary btn-sm m-1">Expand</button>
                         <button class="btn btn-success btn-sm m-1">Archirve</button>
+                        <button class="btn btn-primary btn-sm m-1">Update</button>
                         <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
 
@@ -50,6 +51,7 @@
                     </p>
                     <button class="btn btn-primary btn-sm m-1">Expand</button>
                     <button class="btn btn-success btn-sm m-1">Archirve</button>
+                        <button class="btn btn-primary btn-sm m-1">Update</button>
                     <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
 
@@ -62,6 +64,7 @@
                     </p>
                     <button class="btn btn-primary btn-sm m-1">Expand</button>
                     <button class="btn btn-success btn-sm m-1">Archirve</button>
+                        <button class="btn btn-primary btn-sm m-1">Update</button>
                     <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
             </div>
