--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -50,7 +50,7 @@
             <!-- Heading -->
             <h3 class="text-success"><strong>About Me</strong></h3>
             <p>
-                I am Vitalis, <span class="text-success"><strong>Kipyegon Kirui Vitalis</strong></span> to be detail.
+                I am Vitalis, <span class="text-success"><strong>Kipyegon Kirui Vitalis</strong></span> to be detailed.
                 A Full-Stack software developer by profession. My favorite choice of stack is <span class="text-success">
                     <strong>MEAN Stack.</strong>
                 </span>
