--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -99,22 +99,12 @@
                     </div>
 
                     <!-- Category -->
-                    <div class="form-group mb-3 mt-3">
-                        <p class="text-primary"><strong>Select categories applicable</strong></p>
-                        <input type="checkbox" class="form-check-input">
-                        <label for="" class="form-check-label">General software engineering</label>
-                    </div>
-                    <div class="form-group mb-3 mt-3">
-                        <input type="checkbox" class="form-check-input">
-                        <label for="" class="form-check-label ">MEAN Stack</label>
-                    </div>
-                    <div class="form-group mb-3 mt-3">
-                        <input type="checkbox" class="form-check-input">
-                        <label for="" class="form-check-label">Angular</label>
-                    </div>
-                    <div class="form-group mb-3 mt-3">
-                        <input type="checkbox" class="form-check-input">
-                        <label for="" class="form-check-label">Others</label>
+                    <div class="mt-3 mb-1">
+                        <h5 class="mt-3 mb-1"><strong>Select category</strong></h5>
+                        <select class="custom-select">
+                            <option selected disabled>Choose Category</option>
+                            <option *ngFor="let category of categories">{{category}}</option>
+                        </select>
                     </div>
 
                     <!-- Blog body -->
@@ -122,6 +112,22 @@
                         <label for="" class="mb-1 mt-3">Description</label>
                         <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
                     </div>
+
+                    <!-- Status -->
+                    <div class="form-group">
+                        <h5 class="mt-3 mb-1"><strong>Select status</strong></h5>            
+                            <div class="custom-control custom-radio">
+                                <input id="active" type="radio" class="custom-control-input" value="active" name="status"
+                                    formControlName="status">
+                                <label class="custom-control-label" for="active">Active</label>
+                            </div>
+                    
+                            <div class="custom-control custom-radio">
+                                <input id="in-active" type="radio" class="custom-control-input" value="in-active" name="status"
+                                    formControlName="status">
+                                <label class="custom-control-label" for="in-active">In-active</label>
+                            </div>                    
+                        </div>
 
                     <!-- Buttons -->
                     <button class="btn btn-primary m-3">Post</button>
