--- a/Blog-UI/src/app/Components/homepage/homepage.component.css
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.css
@@ -96,7 +96,7 @@ button{
 }
 
 /* Suggestion styles */
-label{
+label, .label{
     color: brown;
 }
 
@@ -108,6 +108,11 @@ label{
 .form-control{
     padding: 2%;
     border-radius: 25px 0px 100px 0px;
+}
+
+.custom-select{
+    padding: 1%;
+    border-radius: 25px 0px 30px 0px;
 }
 
 .suggestion{
