--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -215,16 +215,27 @@
                 <!-- form -->
                 <form action="" [formGroup]="suggestionForm" (ngSubmit)="submitSuggestion()">
 
+                    <!-- Title -->
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Title</strong></label>
                         <input type="text" class="form-control" name="title" formControlName="title">
                     </div>
 
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Category</strong></label>
                         <input type="text" class="form-control" name="category" formControlName="category">
+                    </div> -->
+
+                    <!-- Category -->
+                    <div class="mt-3 mb-1">
+                        <p class="mt-3 mb-1 label"><strong>Choose category</strong></p>
+                        <select class="custom-select">
+                            <option selected disabled>Choose Category</option>
+                            <option *ngFor="let category of categories">{{category}}</option>
+                        </select>
                     </div>
 
+                    <!-- Blog -->
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Blog</strong></label>
                         <textarea name="blog" id="" cols="30" rows="5" class="form-control" formControlName="blog" ></textarea>
