debugging blog form in admin panel

--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -117,14 +117,12 @@
                     <div class="form-group">
                         <h5 class="mt-3 mb-1"><strong>Select status</strong></h5>            
                             <div class="custom-control custom-radio">
-                                <input id="active" type="radio" class="custom-control-input" value="active" name="status"
-                                    formControlName="status">
+                                <input id="active" type="radio" class="custom-control-input" value="active" name="status">
                                 <label class="custom-control-label" for="active">Active</label>
                             </div>
                     
                             <div class="custom-control custom-radio">
-                                <input id="in-active" type="radio" class="custom-control-input" value="in-active" name="status"
-                                    formControlName="status">
+                                <input id="in-active" type="radio" class="custom-control-input" value="in-active" name="status">
                                 <label class="custom-control-label" for="in-active">In-active</label>
                             </div>                    
                         </div>
