--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -84,51 +84,54 @@
             <!-- Blog form -->
             <div class="form">
 
-                <form action="">
+                <form [formGroup]="blogForm" (ngSubmit)="submitBlog()">
 
                     <!-- Image -->
                     <div class="form-group">
                         <label for="" class="mb-1 mt-3"><strong>Image</strong></label>
-                        <input type="file" class="form-control">
+                        <input type="file" class="form-control" name="image" formControlName="image">
                     </div>
 
                     <!-- Title -->
                     <div class="form-group">
                         <label for="" class="mb-1 mt-3"><strong>Title</strong></label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="title" formControlName="title">
                     </div>
 
                     <!-- Category -->
                     <div class="mt-3 mb-1">
                         <h5 class="mt-3 mb-1"><strong>Select category</strong></h5>
-                        <select class="custom-select">
+                        <select class="custom-select"
+                        name="category" formControlName="category"
+                        >
                             <option selected disabled>Choose Category</option>
-                            <option *ngFor="let category of categories">{{category}}</option>
+                            <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
                         </select>
                     </div>
 
                     <!-- Blog body -->
                     <div class="form-group">
                         <label for="" class="mb-1 mt-3">Description</label>
-                        <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                        <textarea name="" id="" cols="30" rows="5" class="form-control" name="description" 
+                        formControlName="description"></textarea>
                     </div>
 
                     <!-- Status -->
                     <div class="form-group">
                         <h5 class="mt-3 mb-1"><strong>Select status</strong></h5>            
                             <div class="custom-control custom-radio">
-                                <input id="active" type="radio" class="custom-control-input" value="active" name="status">
+                                <input id="active" type="radio" class="custom-control-input" value="active" name="status" formControlName="status">
                                 <label class="custom-control-label" for="active">Active</label>
                             </div>
                     
                             <div class="custom-control custom-radio">
-                                <input id="in-active" type="radio" class="custom-control-input" value="in-active" name="status">
+                                <input id="in-active" type="radio" class="custom-control-input" value="in-active" name="status" formControlName="status">
                                 <label class="custom-control-label" for="in-active">In-active</label>
                             </div>                    
                         </div>
 
                     <!-- Buttons -->
-                    <button class="btn btn-primary m-3">Post</button>
+                    <button class="btn btn-primary m-3" type="submit">Post</button>
                     <button class="btn btn-info m-3">Reset</button>
 
                 </form>
