--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -221,17 +221,13 @@
                         <input type="text" class="form-control" name="title" formControlName="title">
                     </div>
 
-                    <!-- <div class="form-group">
-                        <label for="" class="mt-3 mb-1"><strong>Category</strong></label>
-                        <input type="text" class="form-control" name="category" formControlName="category">
-                    </div> -->
-
                     <!-- Category -->
-                        <p class="mt-3 mb-1 label"><strong>Choose category</strong></p>
-                        <select class="custom-select">
-                            <option selected disabled>Choose Category</option>
-                            <option *ngFor="let category of categories">{{category}}</option>
+                    <div class="mt-3 mb-1">
+                        <p class="mt-3 mb-1 label"><strong>Select category</strong></p>
+                        <select class="custom-select" (change)="changeCategory($event)" name="category" formControlName="category">
+                            <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
                         </select>
+                    </div>
 
                     <!-- Blog -->
                     <div class="form-group">
