--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -100,12 +100,10 @@
 
                     <!-- Category -->
                     <div class="mt-3 mb-1">
-                        <h5 class="mt-3 mb-1"><strong>Select category</strong></h5>
+                        <h5 class="mt-3 mb-1 label"><strong>Select category</strong></h5>
                         <select class="custom-select"
                         (change)="changeCategory($event)"
-                        name="category" formControlName="category"
-                        >
-                            <option selected disabled>Choose Category</option>
+                        name="category" formControlName="category">
                             <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
                         </select>
                     </div>
