--- a/Blog-UI/src/styles.css
+++ b/Blog-UI/src/styles.css
@@ -3,10 +3,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* font-family: 'Nova Round', cursive; */
+    font-family: 'Nova Round', cursive;
     /* font-family: 'Charm', cursive; */
     /* font-family: 'Lusitana', serif; */
-    font-family: 'Amiri', serif;
+    /* font-family: 'Amiri', serif; */
+    font-family: 'Jost', sans-serif;
+    /* font-family: 'Josefin Sans', sans-serif; */
 }
 
 html,
@@ -14,9 +16,9 @@ body {
     height: 100%;
 }
 
-p, li{
+/* p, li{
     font-size: 1.18rem;
-}
+} */
 
 .btn-primary{
     background-color: rgb(86, 122, 154) !important;
