--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -79,8 +79,8 @@
                 </p>
             </div>
 
-            <!-- Sample Blogs -->
-            <div *ngFor="let active of activeBlogs">
+            <!-- Active Blogs -->
+            <div *ngFor="let active of activeBlogs" class="pt-3">
                 <ul>
                     <li><strong>{{active.title}} | <span class="category">{{active.category}}</span></strong></li>
                     <p>
@@ -92,7 +92,6 @@
                     <button class="btn btn-primary m-1">Join</button>
                     <button class="btn btn-success  m-1">Star</button>
                 </ul>
-                    
 
             </div>
         
@@ -112,39 +111,19 @@
             </div>
 
             <!-- Sample Blogs -->
-            <div>
+            <div *ngFor="let new of newBlogs" class="pt-3">
                 <ul>
-                    <li><strong>Choice of Frontend Frameworks | <span class="category">React Js</span></strong></li>
+                    <li><strong>{{new.title}} | <span class="category">{{new.category}}</span></strong></li>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
-                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
-                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                        {{new.description}}
+                    </p>
+                    <p class="text-primary">
+                        {{new.createdAt | date}}
                     </p>
                     <button class="btn btn-primary m-1">Join</button>
                     <button class="btn btn-success  m-1">Star</button>
                 </ul>
             
-                <ul>
-                    <li><strong>Choice of Frontend Frameworks | <span class="category">Angular Material</span></strong></li>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
-                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
-                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
-                    </p>
-                    <button class="btn btn-primary m-1">Join</button>
-                    <button class="btn btn-success  m-1">Star</button>
-                </ul>
-            
-                <ul>
-                    <li><strong>Choice of Frontend Frameworks | <span class="category">Vue Js</span></strong></li>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
-                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
-                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
-                    </p>
-                    <button class="btn btn-primary m-1">Join</button>
-                    <button class="btn btn-success  m-1">Star</button>
-                </ul>
             </div>
         
         </div>
