--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -27,14 +27,12 @@
                 </p>
             </div>
 
-            <!-- Sample Blogs -->
+            <!-- Blogs -->
             <div class="blogs">
-                <ul>
-                    <li><strong>Choice of Frontend Frameworks</strong></li>
+                <ul *ngFor="let blog of runningBlogs">
+                    <li><strong>{{blog.title}}</strong></li>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio. 
-                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia 
-                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                        {{blog.description}}
                     </p>
                         <button class="btn btn-primary btn-sm m-1">Expand</button>
                         <button class="btn btn-success btn-sm m-1">Archirve</button>
@@ -42,31 +40,6 @@
                         <button class="btn btn-danger btn-sm m-1">Delete</button>
                 </ul>
 
-                <ul>
-                    <li><strong>Choice of Frontend Frameworks</strong></li>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
-                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
-                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
-                    </p>
-                    <button class="btn btn-primary btn-sm m-1">Expand</button>
-                    <button class="btn btn-success btn-sm m-1">Archirve</button>
-                        <button class="btn btn-primary btn-sm m-1">Update</button>
-                    <button class="btn btn-danger btn-sm m-1">Delete</button>
-                </ul>
-
-                <ul>
-                    <li><strong>Choice of Frontend Frameworks</strong></li>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
-                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
-                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
-                    </p>
-                    <button class="btn btn-primary btn-sm m-1">Expand</button>
-                    <button class="btn btn-success btn-sm m-1">Archirve</button>
-                        <button class="btn btn-primary btn-sm m-1">Update</button>
-                    <button class="btn btn-danger btn-sm m-1">Delete</button>
-                </ul>
             </div>
 
         </div>
