--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.css
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.css
@@ -13,8 +13,8 @@
 .runningBlogs{
     background-color: rgb(209, 231, 250);
     /* padding: 5%; */
-    border-radius: 150px 0px 150px 0px;
-    padding-top: 1%;
+    border-radius: 50px;
+    padding-top: 2%;
 }
 
 
@@ -67,7 +67,7 @@ h2{
 .blogForm {
     background-color: rgb(233, 233, 156);
     padding: 1%;
-    border-radius: 150px 0px 150px 0px;
+    border-radius: 50px;
 }
 
 button {
