--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -28,12 +28,14 @@
             </div>
 
             <!-- Blogs -->
-            <div class="blogs">
+            <div class="blogs pt-3">
                 <ul *ngFor="let blog of runningBlogs">
                     <li><strong>{{blog.title}}</strong></li>
                     <p>
                         {{blog.description}}
                     </p>
+                    <p class="text-primary">{{blog.createdAt | date }}</p>
+
                         <button class="btn btn-primary btn-sm m-1">Expand</button>
                         <button class="btn btn-success btn-sm m-1">Archirve</button>
                         <button class="btn btn-primary btn-sm m-1">Update</button>
