--- a/Blog-UI/src/app/Components/blog-details/blog-details.component.html
+++ b/Blog-UI/src/app/Components/blog-details/blog-details.component.html
@@ -15,6 +15,9 @@
                 <p class="text-success"><strong>{{blog.createdAt | date | uppercase}}</strong></p>
             </div>
 
+            <!-- Comment button -->
+            <button class="btn btn-primary m-3" type="button">Comment</button>
+
         </div>
     </div>
 
