displaing single running blogs

--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -89,7 +89,7 @@
                     <p class="text-primary">
                         {{active.createdAt | date}}
                     </p>
-                    <button class="btn btn-primary m-1">Join</button>
+                    <button class="btn btn-primary m-1" type="button" (click)="openBlog(active._id)">Join</button>
                     <button class="btn btn-success  m-1">Star</button>
                 </ul>
 
